--- a/tmath-lab/tmath-lab.csproj
+++ b/tmath-lab/tmath-lab.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Clipper2" Version="1.3.0" />
+    <PackageReference Include="Extreme.Numerics" Version="8.1.25" />
     <PackageReference Include="MSTest" Version="2.2.10" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
