update geo_math namespace

--- a/TMath/tmath.csproj
+++ b/TMath/tmath.csproj
@@ -55,6 +55,7 @@
     <Compile Include="geo_math\curve\arc.cs" />
     <Compile Include="geo_math\curve\Circle.cs" />
     <Compile Include="geo_math\curve\ellipse.cs" />
+    <Compile Include="geo_math\curve\spline.cs" />
     <Compile Include="geo_math\define.cs" />
     <Compile Include="geo_math\GeometryException.cs" />
     <Compile Include="geo_math\GeometryOperator.cs" />
